# DNS-CLI-Troubleshooter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_dashboard.py
cli_troubleshooter/: auth.py  config.py  models.py
cli_troubleshooter/ai/: analyzer.py
cli_troubleshooter/cli/: app.py
cli_troubleshooter/cli/display/: tables.py
cli_troubleshooter/dashboard/: app.py
cli_troubleshooter/dashboard/routers/: alerts_router.py  auth_router.py  diagnostics.py  export_router.py  history.py  ws.py
cli_troubleshooter/dashboard/static/: index.html
cli_troubleshooter/diagnostics/: runner.py
cli_troubleshooter/diagnostics/checks/: base.py  dns.py  http.py  interfaces.py  ping.py  ports.py  ssl.py  traceroute.py
cli_troubleshooter/storage/: db.py  repositories.py
