[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cli-troubleshooter"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "anthropic>=0.25",
    "sqlmodel>=0.0.16",
    "dnspython>=2.6",
    "python-whois>=0.9",
    "httpx>=0.27",
    "psutil>=5.9",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
]

[project.scripts]
ct = "cli_troubleshooter.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_troubleshooter*"]
